Motion Clip editor doesn't update to current frame when returning from maximized region view #54581

Closed
opened 2018-04-12 16:58:31 +02:00 by Konstantins Visnevskis · 5 comments

System Information
win8.1x64, 3x gtx580

Blender Version
2.79a

Short description of error
After Changing the frame in a maximized (full screen) region view, returning to multiple region view, the current frame in Motion Clip editors does not get updated to current frame.

mc.blend
Exact steps for others to reproduce the error

  • Maximize viewport or motion clip editor clip view
  • Alt+Scroll to change the frame
  • Return to normal view
  • Motion Clips editors refer to old frame
**System Information** win8.1x64, 3x gtx580 **Blender Version** 2.79a **Short description of error** After Changing the frame in a maximized (full screen) region view, returning to multiple region view, the current frame in Motion Clip editors does not get updated to current frame. [mc.blend](https://archive.blender.org/developer/F2670044/mc.blend) **Exact steps for others to reproduce the error** - Maximize viewport or motion clip editor clip view - Alt+Scroll to change the frame - Return to normal view - Motion Clips editors refer to old frame

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-04-13 12:55:45 +02:00
Member

Checked a bit on this, but probably have to pass this on to @Sergey

Thing is that framenumber is decoupled for each MovieClipUser and these are running out of sync in the case of the report.
(checked in draw_movieclip_cache and clip_draw_cfra)

I'll confirm this for the time being, but it might also be that this is intended even?

Checked a bit on this, but probably have to pass this on to @Sergey Thing is that framenumber is decoupled for each `MovieClipUser` and these are running out of sync in the case of the report. (checked in `draw_movieclip_cache` and `clip_draw_cfra`) I'll confirm this for the time being, but it might also be that this is intended even?

This issue was referenced by a3261aad13

This issue was referenced by a3261aad130eabdcdf4938144477e4d0dd574932

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54581
No description provided.