Fix T54581: Clip editor doesn't synchronize frame on layout change